# $Id$

noinst_PROGRAMS = CompressTest Bz2CompressTest SimpleTest NatcmpTest

TESTS = CompressTest Bz2CompressTest SimpleTest NatcmpTest

CompressTest_SOURCES = CompressTest.cc

Bz2CompressTest_SOURCES = Bz2CompressTest.cc

SimpleTest_SOURCES = SimpleTest.cc

NatcmpTest_SOURCES = NatcmpTest.cc strnatcmp.c

AM_CXXFLAGS = -W -Wall -Wold-style-cast -I$(top_srcdir)/include
